{{$NEXT}}

0.03    2015-08-24
        * Updated relay_on() and relay_off() methods to accept zero based
          relay number, or bank and relay numbers as parameters

0.01    2015-08-19
        * Initial release as trial module